# MGS_EXTRACT

./: README.md
blender_addon/: import_mgs2_animation.py  import_mgs2_with_model.py  mgs2_anim_import.py  visualize_bones.py
capture_dll/: CMakeLists.txt  bone_capture.cpp  bone_capture.h  build.bat  d3d11.def  d3d11_proxy.cpp
docs/: BUILD_GUIDE.md  technical_reference.md
memory_capture/: build.bat  memory_scanner.cpp
tools/: fix_json.py  renderdoc_extractor.py
